# common-feishu-sdk

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  PUBLISH.sh  README.md  main.py  pyproject.toml
.claude/: settings.json
.claude/commands/: implement.md  plan.md  preflight.md  review.md  sync-docs.md  tdd.md
.claude/hooks/: hooks.json
.claude/rules/: 01-dev-workflow.md  02-tdd.md  03-coding-style.md  06-git-workflow.md  07-doc-sync.md  coding-style.md  feishu-api.md  security.md
docs/: design.md  parallel-development.md  ylhp-common-feishu-sdk 需求与架构设计文档.md
examples/: 01_send_text.py  02_send_card.py  03_h5_login.py  04_sync_org_structure.py  05_daily_reminder.py  06_multi_app.py
src/common-feishu-sdk/: __init__.py
src/common-feishu-sdk/modules/: base.py  department.py
src/common-feishu-sdk/schemas/: department.py
src/ylhp_common_feishu_sdk/: README.md  __init__.py  _retry.py  client.py  config.py  exceptions.py  log.py  models.py
src/ylhp_common_feishu_sdk/modules/: base.py
src/ylhp_common_feishu_sdk/services/: _base.py  attendance.py  auth.py  contact.py  messaging.py
tests/: conftest.py  test_client.py  test_config.py  test_exceptions.py  test_log.py  test_models.py  test_retry.py
tests/services/: test_attendance.py  test_auth.py  test_base.py  test_contact.py  test_messaging.py
