[project]
name = "ylhp-common-feishu-sdk"
version = "1.1.0"
description = "公司内部飞书 API Python SDK — 一行代码搞定飞书"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lark-oapi>=1.5.3",
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://git.yinlihupo.cn/yinlihupo/common-feishu-sdk"
Documentation = "https://git.yinlihupo.cn/yinlihupo/common-feishu-sdk/src/branch/main/README.md"
Repository = "https://git.yinlihupo.cn/yinlihupo/common-feishu-sdk"

[dependency-groups]
dev = [
    "lark-oapi>=1.5.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ylhp_common_feishu_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
